# coursera-geometry

./: .bazelrc  .dir-locals.el  BUILD.bazel  README.md  WORKSPACE  binary_search.cc  check_convex.cc  check_convex.input.1  check_convex.input.2  convex.cc  convex.input.1  convex_hull.cc  convex_hull.input.1  convex_hull.input.2  convex_hull.input.3  convex_hull.input.4  convex_hull.input.5  hello.cc  hello.h  hor_vert.cc  hor_vert.input.1  hor_vert.input.2  line_intersect.cc  point_vector.cc  point_vector.input.1  point_vector.input.2  polygon.cc  polygon.input.1  rotated_binary_search.cc  segments.cc  segments.input.1  segments.input.2  segments.input.3  skip_list.cc  tangents.cc  tangents.input.1  tangents.input.2  tangents.input.3  triangle.cc  triangle.input.2
