# Copyright 2018 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_library(
    name = "hello",
    srcs = ["hello.cc"],
    hdrs = ["hello.h"],
)

cc_test(
    name = "hello_test",
    srcs = ["hello_test.cc"],
    deps = [
        ":hello",
        "@gtest//:gtest_main",
    ],
)

cc_binary(
    name = "hello_main",
    srcs = ["hello_main.cc"],
    deps = [
        ":hello",
    ],
)

cc_binary(
    name = "point_vector",
    srcs = ["point_vector.cc"],
)

cc_binary(
    name = "triangle",
    srcs = ["triangle.cc"],
)

cc_binary(
    name = "polygon",
    srcs = ["polygon.cc"],
)

cc_binary(
    name = "convex",
    srcs = ["convex.cc"],
)

cc_binary(
    name = "binary_search",
    srcs = ["binary_search.cc"],
)

cc_binary(
    name = "rotated_binary_search",
    srcs = ["rotated_binary_search.cc"],
)

# lesson 2

cc_binary(
    name = "check_convex",
    srcs = ["check_convex.cc"],
)

cc_binary(
    name = "convex_hull",
    srcs = ["convex_hull.cc"],
)

cc_binary(
    name = "tangents",
    srcs = ["tangents.cc"],
)

# lesson 3

cc_binary(
    name = "line_intersect",
    srcs = ["line_intersect.cc"],
)

cc_binary(
    name = "polygon_intersection",
    srcs = ["polygon_intersection.cc"],
)

cc_binary(
    name = "hor_vert",
    srcs = ["hor_vert.cc"],
)

cc_binary(
    name = "skip_list",
    srcs = ["skip_list.cc"],
)

cc_binary(
    name = "segments",
    srcs = ["segments.cc"],
)

